--- a/app/src/main/res/layout/activity_customer_details.xml
+++ b/app/src/main/res/layout/activity_customer_details.xml
@@ -218,6 +218,7 @@
                 android:backgroundTint="@color/green"
                 android:text="@string/visited_the_customer_space"
                 android:textStyle="normal"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
@@ -232,7 +233,36 @@
                 android:backgroundTint="@color/red"
                 android:text="@string/not_visited_the_customer"
                 android:textStyle="normal"
-                android:visibility="visible"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnVisitedTheCustomer" />
+
+
+            <!--Start Visit-->
+            <Button
+                android:id="@+id/btnStartVisit"
+                style="@style/CustomButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:backgroundTint="@color/green"
+                android:text="@string/start_visit"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
+
+            <!--Stop Visit-->
+            <Button
+                android:id="@+id/btnStopVisit"
+                style="@style/CustomButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:backgroundTint="@color/red"
+                android:text="@string/stop_visit"
+                android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnVisitedTheCustomer" />
