--- a/app/src/main/res/layout/custom_dialog_editable.xml
+++ b/app/src/main/res/layout/custom_dialog_editable.xml
@@ -13,33 +13,61 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/_10sdp">
 
-        <EditText
-            android:id="@+id/edtPleaseSpecifyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilSpecifyName"
+            style="@style/text_input_layout"
+            app:hintEnabled="false"
             android:layout_marginTop="@dimen/_30sdp"
-            android:hint="@string/please_specify_name"
-            android:inputType="text|textMultiLine"
-            android:maxLines="5"
-            android:textAlignment="center"
+            android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginEnd="@dimen/_30sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/edtPleaseSpecifyContact"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtPleaseSpecifyName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/please_specify_name"
+                android:inputType="text|textMultiLine"
+                android:maxLines="2"
+                android:background="@color/white"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilSpecifyContact"
+            style="@style/text_input_layout"
+            app:hintEnabled="false"
             android:layout_marginTop="@dimen/_10sdp"
-            android:digits="0123456789"
-            android:hint="@string/please_specify_contact"
-            android:inputType="number"
-            android:maxLength="10"
-            android:maxLines="1"
-            android:textAlignment="center"
+            android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginEnd="@dimen/_30sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyName" />
+            app:layout_constraintTop_toBottomOf="@id/tilSpecifyName">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtPleaseSpecifyContact"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:digits="0123456789"
+                android:hint="@string/please_specify_contact"
+                android:inputType="number"
+                android:maxLength="10"
+                android:background="@color/white"
+                android:maxLines="1"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <Button
             android:id="@+id/btnProceed"
@@ -52,7 +80,7 @@
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtPleaseSpecifyContact" />
+            app:layout_constraintTop_toBottomOf="@id/tilSpecifyContact" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
