--- a/app/src/main/res/layout/item_status_details_of_customer.xml
+++ b/app/src/main/res/layout/item_status_details_of_customer.xml
@@ -274,12 +274,27 @@
             android:layout_height="wrap_content"/>
 
 
+        <!--For All flows having Others with reason-->
+        <TextView
+            android:id="@+id/txtReasonOthers"
+            tools:text="RelativeName"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            app:layout_constraintTop_toBottomOf="@+id/txtDateOfVisitPromised"
+            app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
+            android:visibility="gone"
+            android:textColor="@color/black"
+            android:textStyle="normal"
+            android:textSize="@dimen/_11ssp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/labelNotes"
             android:text="@string/notes"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_3sdp"
-            app:layout_constraintTop_toBottomOf="@+id/txtDateOfVisitPromised"
+            app:layout_constraintTop_toBottomOf="@+id/txtReasonOthers"
             app:layout_constraintStart_toStartOf="@+id/txtMidStatusInfo3"
             android:visibility="gone"
             android:textColor="@color/black"
