--- a/app/src/main/res/layout/activity_google_maps.xml
+++ b/app/src/main/res/layout/activity_google_maps.xml
@@ -88,9 +88,9 @@
 
     <Button
         android:id="@+id/btnSaveDistance"
-        app:layout_constraintStart_toEndOf="@+id/txtDistance"
-        android:layout_marginStart="@dimen/_30sdp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtDistance"
+        android:layout_marginEnd="@dimen/_40sdp"
         app:layout_constraintBottom_toBottomOf="@id/txtDistance"
         android:layout_width="wrap_content"
         android:visibility="visible"
