custom_dialog_notes_history- added ivClose icon and removed Close Button , adjusted item_notes_history.xml with marginStart=5sdp

--- a/app/src/main/res/layout/item_notes_history.xml
+++ b/app/src/main/res/layout/item_notes_history.xml
@@ -4,6 +4,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     style="@style/MainConstraintStyle"
+    android:layout_marginStart="@dimen/_5sdp"
     android:layout_height="wrap_content">
 
 
