--- a/app/src/main/res/layout/custom_dialog_notes_history.xml
+++ b/app/src/main/res/layout/custom_dialog_notes_history.xml
@@ -12,8 +12,6 @@
             style="@style/MainConstraintStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +29,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="This is a Custom Dialog Box"/>
+
+            <ImageView
+                android:id="@+id/ivClose"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginEnd="@dimen/_2sdp"
+                android:src="@drawable/cancel_close"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                app:tint="@color/textBlue" />
 
             <!--Progress Bar-->
             <ProgressBar
@@ -50,7 +59,6 @@
                 android:id="@+id/rvNotesHistory"
                 app:layout_constraintTop_toBottomOf="@id/txtCustomDialog"
                 android:layout_marginTop="@dimen/_5sdp"
-                app:layout_constraintBottom_toTopOf="@id/btnCloseDialog"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 tools:listitem="@layout/item_notes_history"
@@ -61,18 +69,7 @@
                 android:layout_height="@dimen/_100sdp"/>
 
 
-            <Button
-                android:id="@+id/btnCloseDialog"
-                style="@style/ButtonStyle"
-                android:layout_marginBottom="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rvNotesHistory"
-                android:text="@string/close" />
+
 
 
 
